# lin_alg_tools

./: .gitignore  CMakeLists.txt  README.md
include/lin_alg_tools/: care.h  schur.h
src/: test.cpp
